sfdx-source/force-app/main/default/objects/MX_Order__c/MX_Order__c.object-meta.xml
<CustomObject>
    <description>LEM-13509: Custom Order object for Vendor Integration</description>
    <label>Merchant Order</label>
    <nameField>
        <displayFormat>MX{000000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>