sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the account associated to the current order.</description>
    <inlineHelpText>It is used to store the account associated to the current order.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MX_Order_Account</relationshipName>
    <type>Lookup</type>
</CustomField>