sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the Contact associated with the Order</description>
    <inlineHelpText>It is used to store the Contact associated with the Order</inlineHelpText>
    <label>Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MX_Order_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>