sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Initiate_Auto_Vendor_Routing__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Auto_Vendor_Routing__c</fullName>
    <description>LEM-21576 : Formula field to validate whether vendor Automation routing is required.</description>
    <formula>If(
 AND(
 CONTAINS($Label.Auto_Vendor_Routing_Type, TEXT(Type__c)),
 OR(
NOT CONTAINS($Label.Skip_Auto_Vendor_Routing, TEXT(Work_Order__r.Creation_Source__c )),
ISBLANK(TEXT(Work_Order__r.Creation_Source__c )))
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to validate whether vendor Automation routing is required.</inlineHelpText>
    <label>Initiate Auto Vendor Routing</label>
    <type>Checkbox</type>
</CustomField>