sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Internal_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13509: It is used to indicate if tablet is being sent internal DoorDash employee</description>
    <label>Internal Deployment</label>
    <type>Checkbox</type>
</CustomField>