sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Is_Duplicate_Tablet_Order_Post_Sales__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Tablet_Order_Post_Sales__c</fullName>
    <formula>IF(
   AND(
       TEXT(Work_Plan__r.WorkOrder.Status) = $Label.WorkOrderStatusOnboardingComplete,
       NOT(ISNULL( Work_Plan__r.Work_Plan_Completed_On__c)),
       (TODAY() - Work_Plan__r.Work_Plan_Completed_On__c) &lt; 90
    ),
   true,
   IF(
      NOT(TEXT(Work_Plan__r.WorkOrder.Status) = $Label.Work_Order_Status_Dead), 
      true, false
    )
)</formula>
    <label>Is Duplicate Tablet Order Post Sales</label>
    <type>Checkbox</type>
</CustomField>