sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Is_Social_Mobile_Routing__c.field-meta.xml
<CustomField>
    <fullName>Is_Social_Mobile_Routing__c</fullName>
    <description>LEM-13505 : Check Social Mobile vendor Routing</description>
    <formula>if (
  NOT CONTAINS(TEXT(Account__r.Order_Protocol__c), &quot;Printer&quot;),
     if(TEXT(Account__r.BillingCountryCode) = &apos;CA&apos;, true,
     (
         if(TEXT(Account__r.BillingCountryCode) = &apos;US&apos;,if(Contains($Label.Social_Mobile_Billing_Country_State_Code, Text(Account__r.BillingStateCode)) || Contains($Label.Social_Mobile_Routing_Deck, 
  Text(Account__r.Deck_Rank__c)),true,false),false)
     )
  )
  , false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Social Mobile Routing</label>
    <type>Checkbox</type>
</CustomField>