sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Last_Tracked_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Tracked_Update_Time__c</fullName>
    <description>LEM-13509: It is used to store the last time the Shipping Carrier updated</description>
    <label>Last Tracked Update Time</label>
    <type>DateTime</type>
</CustomField>