sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Menu_Source_for_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Menu_Source_for_Photoshoot__c</fullName>
    <description>LEM-14530: It is used to store the menu source of the photoshoot.</description>
    <label>Menu Source for Photoshoot</label>
    <type>Url</type>
</CustomField>