sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Merchant_Address__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Address__c</fullName>
    <description>LEM-14054: It is used to store the Merchant Address.</description>
    <label>Mx Address</label>
    <type>Address</type>
</CustomField>