sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Mx_Address__c.field-meta.xml
<CustomField>
    <fullName>Mx_Address__c</fullName>
    <description>LEM-13509: It is used to store Shipping Address of the Store Account.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>