sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Mx_City__c.field-meta.xml
<CustomField>
    <fullName>Mx_City__c</fullName>
    <description>LEM-13509 : Stores Shipping City</description>
    <inlineHelpText>Stores Shipping City</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>