sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Mx_Country__c.field-meta.xml
<CustomField>
    <fullName>Mx_Country__c</fullName>
    <description>LEM-13509 : Stores Shipping Country detail</description>
    <inlineHelpText>Stores Shipping Country detail</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>