sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Mx_Street__c.field-meta.xml
<CustomField>
    <fullName>Mx_Street__c</fullName>
    <description>LEM-13509 : Stores Shipping Street</description>
    <inlineHelpText>Stores Shipping Street</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>