sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Order_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Description__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13509: It is used to store the escalation/block reasons for executing the Order.</description>
    <label>Order Status Description</label>
    <length>103725</length>
    <type>LongTextArea</type>
</CustomField>