sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Order_Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Modified_Date__c</fullName>
    <description>LEM-13509: It is used to store the last modified date/time of status change.</description>
    <label>Order Status Modified Date</label>
    <type>DateTime</type>
</CustomField>