sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Parent_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Plan__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-16782: It is used to display the Mx Orders on parent Work Plan related list.</description>
    <label>Parent Work Plan</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>Merchant Orders</relationshipLabel>
    <relationshipName>Store_Merchant_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>