sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Assignment_ID__c</fullName>
    <description>LEM-14530: It is used to store the assignment Id for the photoshoot. It is updated only by OCUS.</description>
    <label>Photoshoot Assignment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>