sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date__c</fullName>
    <description>LEM-14530: It is used to surface the photoshoot date on Order.</description>
    <formula>Work_Order__r.Photoshoot_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photoshoot Date</label>
    <type>Date</type>
</CustomField>