sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_Pictures_URL__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Pictures_URL__c</fullName>
    <description>LEM-14530 It will be populated from vendor.</description>
    <label>Photoshoot Pictures URL</label>
    <type>Url</type>
</CustomField>