sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_Review_Notes_Tags__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Review_Notes_Tags__c</fullName>
    <description>LEM-14530: It is used to store the notes associated with a photoshoot.</description>
    <label>Photoshoot Review Notes / Tags</label>
    <type>TextArea</type>
</CustomField>