sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Time__c</fullName>
    <description>LEM-14530: It is used to surface the photoshoot time on Order.</description>
    <formula>Work_Order__r.Photoshoot_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photoshoot Time</label>
    <type>Time</type>
</CustomField>