sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Photoshoot_URL__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_URL__c</fullName>
    <description>LEM-14530: It is used to store the URL of the photoshoot.</description>
    <label>Photoshoot URL</label>
    <type>Url</type>
</CustomField>