sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>If state is qc default the language to French</description>
    <formula>IF(
TEXT(Merchant_Address__StateCode__s) = &apos;QC&apos;,
&apos;French&apos;,
IF(
ISBLANK(TEXT(Account__r.Preferred_Language__c)),
&apos;English&apos;,
TEXT(Account__r.Preferred_Language__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>