sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Printer_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Printer_IMEI__c</fullName>
    <description>LEM-13511 : It is used to store the Printer IMEI number.</description>
    <label>Printer IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>