sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14053: It is used to store the associated product bundle.</description>
    <label>Product Bundle</label>
    <referenceTo>Mx_Order_Product_Bundle__c</referenceTo>
    <relationshipLabel>Merchant Orders</relationshipLabel>
    <relationshipName>Related_Merchant_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>