sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Product_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle_Name__c</fullName>
    <description>LEM-13511 : Get Product Bundle Name</description>
    <formula>Product_Bundle__r.Bundle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Bundle Name</label>
    <type>Text</type>
</CustomField>