sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Reason_for_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Replacement__c</fullName>
    <description>LEM-13509: It is used to store the reason for replacement.</description>
    <label>Reason for Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_For_Replacement</valueSetName>
    </valueSet>
</CustomField>