sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Reason_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_if_Other__c</fullName>
    <description>LEM-14530: It is used to store reason for additional photoshoot when reason is unlisted.</description>
    <label>Reason if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>