sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Replacement_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Reason_Other__c</fullName>
    <description>LEM-13509: It&apos;s used to store replacement reason for other picklist field value.</description>
    <label>Replacement Reason Other</label>
    <type>TextArea</type>
</CustomField>