sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Return_Label_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Label_Status__c</fullName>
    <description>LEM-14703: It is used to track the return label status.</description>
    <label>Return Label Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return Label Generated</fullName>
            </value>
            <value>
                <fullName>Return Label Sent to Mx</fullName>
            </value>
            <value>
                <fullName>Failed to Send to Mx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>