sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-15575: It indicates the Segment of the Account associated to Merchant Order.</description>
    <formula>TEXT(Account__r.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>