sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Ship_From__c.field-meta.xml
<CustomField>
    <fullName>Ship_From__c</fullName>
    <description>LEM-13509: It is used to store the Vendor address.</description>
    <label>Ship From</label>
    <type>Address</type>
</CustomField>