sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <description>LEM-13509: It is used to store the Shipment Status</description>
    <label>Shipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Unsuccessful Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>