sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Shipment_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status_Description__c</fullName>
    <description>LEM-13509: It is used to store the Description of the Shipment Status</description>
    <label>Shipment Status Description</label>
    <type>TextArea</type>
</CustomField>