sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <description>LEM-14053: It is used to store the Address from Store Account.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>