sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <description>LEM-13509: It is used to store the name of Carrier.</description>
    <label>Shipping Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>