sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <description>LEM-13509: Store type of shipping i.e standard or Expedited</description>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>