sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-13509: Merchant Order Status</description>
    <inlineHelpText>Merchant Order Status</inlineHelpText>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mx_Order_Status</valueSetName>
    </valueSet>
</CustomField>