sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <description>LEM-13509: It is used to store the escalation/block reasons for executing the Order</description>
    <inlineHelpText>It is used to store the escalation/block reasons for executing the Order</inlineHelpText>
    <label>Order Status Description</label>
    <type>TextArea</type>
</CustomField>