sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Store_Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Store_Order_Protocol__c</fullName>
    <description>LEM-13509: It is used to store the Order Protocol on the Store Account</description>
    <inlineHelpText>It is used to store the Order Protocol on the Store Account</inlineHelpText>
    <label>Store Order Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>