sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Tablet_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Tablet_IMEI__c</fullName>
    <description>LEM-13511 : It is used to store the Tablet IMEI number.</description>
    <label>Tablet IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>