sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>LEM-13509: It is used to store the tracking number.</description>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>