sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Tracking_Url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Url__c</fullName>
    <description>LEM-15978: Generate Tracking Url for Shipping Carrier and Tracking number</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(Shipping_Carrier__c)),
    NOT(ISBLANK(TRIM(Tracking_Number__c)))
  ),
  CASE(
    UPPER(TRIM(Shipping_Carrier__c)),
    $Label.Shipping_Carrier_Fedex,
    $Label.FedDex_Shipping_Tracking_Url&amp;Tracking_Number__c,
    $Label.Shipping_Carrier_DHL,
    $Label.DHL_Shipping_Tracking_Url&amp;Tracking_Number__c,
    $Label.Shipping_Carrier_Startrack,
    $Label.StarTrack_Shipping_Tracking_Url&amp;Tracking_Number__c,
    null
  ),
  null
)</formula>
    <label>Tracking Url</label>
    <type>Text</type>
</CustomField>