sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-13509: Select Type of order</description>
    <inlineHelpText>Select Type of order</inlineHelpText>
    <label>Type of Mx Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Marketing Kit</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>