sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Type_Of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Request__c</fullName>
    <description>LEM-13509: It is used to store the type of tablet request.</description>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Marketing Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>