sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Vendor_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_ID__c</fullName>
    <description>LEM-13509: It is used to store the unique  identifier for the Order.</description>
    <externalId>true</externalId>
    <label>Vendor Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>