sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Vendor_PhotoShoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PhotoShoot_Date__c</fullName>
    <description>LEM-24164 : Stores updated PhotoShoot time by vendor.</description>
    <label>PhotoShoot Date</label>
    <type>Date</type>
</CustomField>