sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Vendor_PhotoShoot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PhotoShoot_Date_Time__c</fullName>
    <description>LEM-14570 : Store vendor updated photoshoot date time</description>
    <label>Vendor PhotoShoot Date Time</label>
    <type>DateTime</type>
</CustomField>