sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Vendor_PhotoShoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PhotoShoot_Time__c</fullName>
    <description>LEM-24164 : Stores updated PhotoShoot time by vendor.</description>
    <label>PhotoShoot Time</label>
    <type>Time</type>
</CustomField>