sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the associated work order.</description>
    <inlineHelpText>Pull the work order type</inlineHelpText>
    <label>Work Order Origin</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>MX_Order_Work_Order</relationshipName>
    <type>Lookup</type>
</CustomField>