sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Sub_Type__c</fullName>
    <formula>TEXT(Work_Order__r.Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Sub Type</label>
    <type>Text</type>
</CustomField>