sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>LEM-13509: It is used to store the Type of Work Order.</description>
    <formula>TEXT(Work_Order__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Type</label>
    <type>Text</type>
</CustomField>