sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the associated WorkPlan.</description>
    <label>Work Plan</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>Merchant Orders</relationshipLabel>
    <relationshipName>Merchant_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>