sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Name__c</fullName>
    <description>LEM-13511 : Formula Field For Get WorkPlan Name</description>
    <formula>HYPERLINK(&apos;/&apos; + Work_Plan__r.Id, Work_Plan__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Plan Name</label>
    <type>Text</type>
</CustomField>