sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Status__c</fullName>
    <description>LEM-13511 : Get Work plan Status Field Value</description>
    <formula>TEXT(Work_Plan__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Plan Status</label>
    <type>Text</type>
</CustomField>