sfdx-source/force-app/main/default/objects/MX_Order__c/fields/Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Work_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14054: It is used to store the Work Step associated with the Mx Order.</description>
    <label>Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Merchant Orders</relationshipLabel>
    <relationshipName>Merchant_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>